# xenon-rs

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.slurm  Dockerfile.xenon  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml
examples/: create_file.rs  hello_world.rs
scripts/: install-protoc.sh
src/: compute.rs  credentials.rs  lib.rs  storage.rs
src/proto/: xenon.proto  xenon.rs  xenon_grpc.rs
tests/: common.rs  compute.rs  storage.rs
