[package]
name = "xenon-rs"
version = "0.2.0"
description = "Rust bindings to the Xenon middleware (gRPC)."
authors = ["Onno Valkering"]
repository = "https://github.com/onnovalkering/xenon-rs"
documentation = "https://docs.rs/xenon-rs"
keywords  = ["xenon", "middleware", "grpc", "hpc", "slurm"]
license = "MIT"
edition = "2018"
exclude = [
    ".github/*",
    "scripts/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
    "docker-compose.yml",
    "rustfmt.toml",
]

[lib]
name = "xenon"

[dependencies]
anyhow = "1.0"
futures = "0.3"
grpcio = { version = "0.7", features = ["openssl"] }
log = "0.4"
protobuf = "2.20"

[dev-dependencies]
actix-rt = "1.1"
env_logger = "0.7"
rand = "0.7"
