[package]
name = "xenon-rs"
version = "0.2.0"
description = "Rust bindings to the Xenon middleware (gRPC)."
authors = ["Onno Valkering"]
repository = "https://github.com/onnovalkering/xenon-rs"
documentation = "https://docs.rs/xenon-rs"
keywords  = ["xenon", "grpc"]
license = "MIT"
edition = "2018"
exclude = [
    ".github/*",
    "scripts/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
    "docker-compose.yml",
    "rustfmt.toml",
]

[lib]
name = "xenon"

[dependencies]
anyhow = "1.0"
futures = "0.3"
grpcio = { version = "0.8", features = ["openssl"] }
log = "0.4"
protobuf = "2.22"

[dev-dependencies]
tokio = { version = "1.2", features = ["rt", "macros"] }
env_logger = "0.8"
rand = "0.8"
