[package]
name = "xenon-rs"
version = "0.4.0"
description = "Rust bindings to the Xenon middleware (gRPC)."
authors = ["Onno Valkering"]
repository = "https://github.com/onnovalkering/xenon-rs"
documentation = "https://docs.rs/xenon-rs"
keywords  = ["xenon", "grpc"]
license = "MIT"
edition = "2018"
exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
    "docker-compose.yml",
    "rustfmt.toml",
]

[lib]
name = "xenon"

[build-dependencies]
tonic-build = "0.5"

[dependencies]
anyhow = "1"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
num-derive = "0.2"
num-traits = "0.2"
prost = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"

[dev-dependencies]
rand = "0.8"
